# AuroraCore

./: CMakeLists.txt  LICENSE
editor/: CMakeLists.txt  main.cpp
editor/include/: core.h
editor/include/resourceManagers/: fontManager.h
editor/include/state/: istate.h
editor/include/state/manager/: stateManager.h
editor/include/state/states/: mainWindowState.h
editor/include/utils/: utils.h
editor/include/utils/logger/: logger.h  loggerStreamBuff.h  mainLogger.h  nullBuff.h
editor/src/: core.cpp  main.cpp
editor/src/resource_managers/: fontManager.cpp
editor/src/state/: istate.cpp
editor/src/state/manager/: stateManager.cpp
editor/src/state/states/: mainWindowState.cpp
editor/src/utils/logger/: logger.cpp  loggerStreamBuff.cpp  mainLogger.cpp
